<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF8C00"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/gra_w_kosci"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/kostka1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/kostka_nr_1"
            android:src="@drawable/znak_zapytania"/>

        <ImageView
            android:id="@+id/kostka2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/kostka_nr_2"
            android:src="@drawable/znak_zapytania"/>

        <ImageView
            android:id="@+id/kostka3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/kostka_nr_3"
            android:src="@drawable/znak_zapytania"/>

        <ImageView
            android:id="@+id/kostka4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/kostka_nr_4"
            android:src="@drawable/znak_zapytania"/>

        <ImageView
            android:id="@+id/kostka5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/kostka_nr_5"
            android:src="@drawable/znak_zapytania"/>
    </LinearLayout>

    <TextView
        android:id="@+id/wylosowane_liczby_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/wylosowane_liczby"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/suma_oczek_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/suma_oczek_0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ilosc_prob_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ilosc_prob_0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/suma_ogolna_tekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/suma_ogolna_0"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/przycisk_losowanie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/rzut_koscmi" />

        <Button
            android:id="@+id/przycisk_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/reset" />
    </LinearLayout>
</LinearLayout>